--- a/lesson10/style.css
+++ b/lesson10/style.css
@@ -1,32 +1,122 @@
+body {
+    background-color: gray;
+}
+
+section {
+    position: relative;
+    margin: 0;
+    padding: 0 29%;
+}
+
+h1 {
+    padding: 15px 0 0 0;
+    margin: 20px 0 0 0;
+}
+
 nav ul {
     display: flex;
-    column-gap: 10px;
     list-style: none;
-    padding: 0;
-    margin: 10px;
+    padding: 5px;
+    margin: 0;
     justify-content: center;
 }
 
 nav ul li a:link,
 nav ul li a:visited {
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    color: white;
+    font-family: sans-serif;
 }
 
 nav ul li a:hover,
 nav ul li a:active {
     text-decoration: none;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
-    color: rgb(40, 19, 227)  ;
+    color: rgb(19, 137, 176);
 }
 
 nav ul li {
-    background-color: rgb(27, 183, 221);
-    padding: 0 20px 0 20px;
-    border-radius:  15px 15px 15px 15px;
+    background-color: rgb(67, 65, 65);
+    padding: 4px 20px 4px 20px;
 }
 
-#vertical-nav {
+ul li:nth-child(1) {
+    background-color: rgb(17, 209, 161);
+    border-radius: 5px 5px 5px 5px;
+}
+
+ul li:nth-child(6) {
+    border-radius: 0 5px 5px 0;
+}
+
+nav div {
+    width: 350px;
+    text-align: center;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 5px 5px;
+    background-color: white;
+}
+
+nav div li {
+    width: 110px;
+    display: block;
+    float: left;
+    margin: 0 30px 0 30px;
+    padding: 0;
+    color: rgb(129, 129, 245);
+    background-color: white;
+    font-family: sans-serif;
+    border: 1px solid gray;
+}
+
+button {
+    width: 60px;
+    background-color: rgb(17, 209, 161);
+    color: white;
+    padding: 5px;
+    border-radius: 5px 5px 5px 5px;
+}
+
+div.add-task {
+    margin: 0;
+    padding: 0 0 20px;
+}
+
+#graph {
+    width: 30px;
+    height: 30px;
+    margin: 0 5px;
+    float: right;
+}
+
+#bin {
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    float: right;
+}
+
+#check {
+    width: 20px;
+    height: 20px;
+    float: left;
+}
+
+#task-4 {
+    text-align: start;
+    text-decoration: line-through;
+}
+
+#task-3 {
+    text-align: start;
+}
+
+#task-2 {
+    text-align: start;
+}
+
+#task-1 {
+    text-align: start;
 }
