--- a/lesson08/style.css
+++ b/lesson08/style.css
@@ -1,19 +1,28 @@
 body {
     background-color: gray;
-    padding: 0 20px 0 20px;
+    padding: 0;
     margin: 0;
+    display: inline-block;
 }
 
 header {
-    width: 120px;
-    display: inline-block;
+    width: 20%;
     border: 2px dotted black;
     text-align: center;
-    margin: 0 380px 0;
+    margin: 0 auto;
     font-family: cursive;
+    padding: 10px;
 }
-section{
-text-align: center;
+
+p {
+    text-align: right;
+}
+
+section {
+    margin: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 h5 {
@@ -25,20 +34,20 @@ h5 {
     padding: 0;
 }
 
-
 h4 {
     font-style: italic;
-    display: block;
 }
 
 div {
-    display: inline-table;
-    width: 340px;
-    height:300px;
-    margin: 5px 5px;
-    text-align: justify;
-    font-size: smaller;
-    padding: 0 10px 0 10px;
+    width: 45%;
+    margin: 10px;
+    font-size: medium;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
 }
 
 div span {
@@ -46,51 +55,24 @@ div span {
 }
 
 img {
-    width: 45%;
-    height: 100px;
-    padding: 50px 10px;
+    width: 50%;
+    height: auto;
+    padding: 10% 2%;
+    float: right;
 }
 
-#model-s {
-    text-align: left;
+.model-s,
+.model-x {
+    border-left: 0;
     border-top: 2px solid black;
     border-right: 2px solid black;
     border-bottom: 2px solid black;
 }
 
-#model-3 {
-    text-align: right;
+.model-3,
+.model-y {
+    border-right: 0;
     border-top: 2px solid black;
     border-left: 2px solid black;
     border-bottom: 2px solid black;
-}
-
-#model-x {
-    text-align: left;
-    border-top: 2px solid black;
-    border-right: 2px solid black;
-    border-bottom: 2px solid black;
-}
-
-#model-y {
-    text-align: right;
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-    border-bottom: 2px solid black;
-}
-
-#tm-s {
-    float: right;
-}
-
-#tm-three {
-    float: left;
-}
-
-#tm-x {
-    float: right;
-}
-
-#tm-y {
-    float: left;
 }
