--- a/lesson09/style.css
+++ b/lesson09/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(244, 244, 192);
-    margin: 80px;
+    margin: 50px;
+    text-align: center;
 }
 
 hr {
@@ -11,85 +12,21 @@ div {
     display: inline-block;
     position: relative;
     border: 2px solid black;
-    width: 150px;
-    margin: 10px;
-    padding: 7px;
+    width: 250px;
+    margin: 20px;
+    padding: 10px;
 }
 
 img {
-    width: 150px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
 }
 
 p {
     font-size: smaller;
 }
 
-#img-1 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-1 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-2 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-3 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-4 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-5 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-6 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-7 {
-    width: 15%;
-    height: 8%;
-    position: absolute;
-    right: 15px;
-    top: 180px;
-}
-
-#img-8 {
+#img-1,#img-2 ,#img-3 ,#img-4 ,#img-5 ,#img-6 ,#img-7 ,#img-8  {
     width: 15%;
     height: 8%;
     position: absolute;
